BE-fix: product 카테고리 검색, search 통합